# aurora-cpp

./: .gitignore  CMakeLists.txt  README.md
resources/scenes/: default.scn
resources/shaders/: basic.frag  basic.vert  light.frag  light.vert  pbr.frag  pbr.vert  reflect.frag  reflect.vert  screen.frag  screen.vert  screen_kernel.frag  skybox.frag  skybox.vert
src/: app.cpp  app.hpp  engine.cpp  engine.hpp  main.cpp
src/input/: cameraController.cpp  cameraController.hpp  input.hpp  inputReceiver.cpp  inputReceiver.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
src/loaders/: hjson.cpp  hjson.hpp  mesh.cpp  mesh.hpp  mtlParser.cpp  mtlParser.hpp  objParser.cpp  objParser.hpp  texture.cpp  texture.hpp
src/math/: angle.hpp  constants.hpp  matrix.hpp  matrix.test.cpp  quaternion.hpp  transform.hpp  vector.hpp
src/renderer/: camera.cpp  camera.hpp  cameraFPS.cpp  cameraFree.cpp  cubemap.cpp  cubemap.hpp  frameBuffer.cpp  frameBuffer.hpp  glutil.hpp  indexBuffer.cpp  indexBuffer.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  projection.cpp  projection.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  sceneGraph.cpp  sceneGraph.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertexArray.cpp  vertexArray.hpp  vertexBuffer.cpp  vertexBuffer.hpp  viewUtil.hpp
src/util/: array.hpp  path.cpp  path.hpp  string.cpp  string.hpp
src/window/: window.cpp  window.hpp
test/: CMakeLists.txt
